Improved on fixed header/footer on mobile

--- a/octoprint_uicustomizer/static/css/uicustomizer.css
+++ b/octoprint_uicustomizer/static/css/uicustomizer.css
@@ -1253,19 +1253,22 @@ html.themeify #UICsetMenuShow{
 
 /* Fix for mobile fixed header/footer */
 @media(max-width:979px){
-    .navbar-fixed-top,.navbar-fixed-bottom{
+    body.UICfixedHeader div.navbar-fixed-top, body.UICfixedFooter div.navbar-fixed-bottom{
         position:fixed !important;
         margin-right: 0px !important;
         margin-left: 0px !important;
     }
-    div.navbar-fixed-bottom #footer_version{
+    body.UICfixedFooter div.navbar-fixed-bottom #footer_version{
         max-width: 100%;
         width: 100%;
         justify-content: center;
         display: flex;
     }
-    div.navbar-fixed-bottom #footer_links{
+    body.UICfixedFooter div.navbar-fixed-bottom #footer_links{
         display: none;
+    }
+    body.UICfixedHeader div.octoprint-container{
+        margin-top: 50px;
     }
 }
 
